# byn

./: .gitignore  .golangci.yml  .goreleaser.yaml  CLA.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  go.mod  go.sum  index.html  install.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/cla-signatures/: v1.json
.github/workflows/: ci.yml  cla.yml  dco.yml  pages.yml  release.yml
assets/: site.css  site.js
cmd/byn/: cliscope.go  cliscope_test.go  cmd_audit.go  cmd_audit_test.go  cmd_config_auth.go  cmd_daemon.go  cmd_daemon_idle_test.go  cmd_daemon_install.go  cmd_daemon_install_test.go  cmd_daemon_test.go  cmd_doctor.go  cmd_doctor_full_test.go  cmd_doctor_test.go  cmd_env.go  cmd_env_test.go  cmd_exec.go  cmd_exec_alias_test.go  cmd_exec_inspect_test.go  cmd_exec_privsep_test.go  cmd_exec_test.go  cmd_export.go  cmd_export_io_test.go  cmd_export_test.go  cmd_import.go  cmd_import_io_test.go  cmd_import_test.go  cmd_list_glob_test.go  cmd_lock_test.go  cmd_migrate.go  cmd_migrate_test.go  cmd_passwd.go  cmd_passwd_test.go  cmd_project.go  cmd_project_test.go  cmd_setup.go  cmd_setup_test.go  cmd_trust.go  cmd_trust_diff_test.go  cmd_trust_test.go  cmd_tui.go  (+48 more)
cmd/byn-exec-helper/: drop_darwin.go  drop_linux.go  drop_test.go  main.go  redeem.go  redeem_test.go
docs/: README.md  architecture.md  audit.md  byn-file-format.md  cli-reference.md  features.md  file-layout.md  glossary.md  index.html  migration.md  portal.md  quickstart.md  releases.md  security.md  spec.md  testing.md  troubleshooting.md  tui-design.md  why-not-containers.md
docs/architecture/: index.html
docs/byn-file-format/: index.html
docs/cli-reference/: index.html
docs/field-notes/: README.md  aws-credential-file-takeover.md  how-agents-leak-secrets.md  index.html  (+2 more)
man/: byn.1
packaging/crates/: Cargo.toml  LICENSE  README.md
packaging/crates/src/: lib.rs
packaging/pypi/: README.md  pyproject.toml
packaging/pypi/byn/: __init__.py
(+350 files in other folders)
